# LBPMR_GNP

./: CMakeLists.txt  LICENSE  README.md
Inc/: AppThread.h  Application.h  DP.h  Feature.h  GNP.h  LBPMR.h  LBPVariants.h  Operator.h  ReadDatasets.h  TFDR.h  TrainPredict.h  svmModel.xml
Src/: AppThread.cpp  Application.cpp  LBPMR.cpp  LBPVariants.cpp  ReadDatasets.cpp  TFDR.cpp  TrainPredict.cpp  main.cpp
